--- a/src/main/resources/test.conf
+++ b/src/main/resources/test.conf
@@ -3,9 +3,9 @@ app {
   useInMemDatabase = true
 
   #configuration for mongoDB
-  mongoDB.port = 27017
+  mongoDB.port = 123
   mongoDB.url = "localhost"
-  mongoDB.databaseName = "distance-tracker"
+  mongoDB.databaseName = "test-distance-tracker"
   mongoDB.collectionName.devices = "devices"
   mongoDB.collectionName.gpsData = "coordinates"
 }
