refactoring configuration/properties

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,9 +3,11 @@ app {
   useInMemDatabase = true
 
   #configuration for mongoDB
-  mongoDB.port = 27017
-  mongoDB.url = "localhost"
-  mongoDB.databaseName = "distance-tracker"
-  mongoDB.collectionName.devices = "devices"
-  mongoDB.collectionName.gpsData = "coordinates"
+  mongoDB {
+    port = 27017
+    url = "localhost"
+    databaseName = "distance-tracker"
+    collectionName.devices = "devices"
+    collectionName.gpsData = "coordinates"
+  }
 }
