--- a/src/main/resources/test.conf
+++ b/src/main/resources/test.conf
@@ -3,9 +3,11 @@ app {
   useInMemDatabase = true
 
   #configuration for mongoDB
-  mongoDB.port = 123
-  mongoDB.url = "localhost"
-  mongoDB.databaseName = "test-distance-tracker"
-  mongoDB.collectionName.devices = "devices"
-  mongoDB.collectionName.gpsData = "coordinates"
+  mongoDB {
+    port = 123
+    url = "localhost"
+    databaseName = "test-distance-tracker"
+    collectionName.devices = "devices"
+    collectionName.gpsData = "coordinates"
+  }
 }
